kubernetes/apps/ai/langfuse/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.35.17
spec:
  hostnames:
    - langfuse.68cc.io
  parentRefs:
    - name: traefik-internal-gateway
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forwardauth
      backendRefs:
        - name: langfuse-web
          port: 3000
